--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@
     font-family: 'Kdam Thmor Pro';
 }
 
+h1 {
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  }
+
+p {
+        color: white;
+        text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+.class-for-index {
+    color: red;
+}
+
 .container-fluid img {
     margin: 0;
     padding: 0;
@@ -34,6 +48,7 @@
     }
 
 .nav-link {
+    font-family: 'Bebas Neue';
     color: black;
 }
 
@@ -115,6 +130,7 @@ footer {
 }
 
 footer a {
+    font-family: 'Bebas Neue';
     color: black;
     text-decoration: none;
 }
@@ -136,5 +152,14 @@ footer li {
 }
 
 #copyright {
+    font-family: 'Bebas Neue';
     color: black;
+}
+
+.btn {
+    font-family: 'Bebas Neue';
+}
+
+.d-flex {
+    font-family: 'Bebas Neue';
 }
